# eit-lossless

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
. src/eit_lossless/: advanced_eit.py (FULL FIXED VERSION)
. src/eit_lossless/2. src/eit_lossless/: utils.py (FIXED memory + new demo)
eit_lossless/: __init__.py  benchmarks.py  core.py  transformers.py
examples/: million_token.py  quickstart.py  thinking_mode.py
tests/: conftest.py  test_eit.py
torch/: __init__.py
